update some deprectaed code, general code tidy up